# flipchem

./: .readthedocs.yml  .travis.yml  .zenodo.json  MANIFEST.in  README.md  README.rst  meson.build  pyproject.toml  setup.py
docs/: conf.py  index.rst  readme.rst  usage.rst
docs/installation/: index.rst  installation.linux.rst  installation.macos.rst  installation.windows.rst
docs/reference/: Flipchem.rst  geophys.rst  index.rst  msis.rst
flipchem/: __init__.py  flipchem.py  geophys.py  msis.py
flipchem/dat/: 2004  2005  2007  2008  2011  2012  2015  2018  2019  2020  2021
flipchem/ext/: __init__.py
notebooks/: io_utils.py  ion_neutral_equations.ipynb  model_comparison.ipynb  usage_examples.ipynb
src/flipchem/: FLIP-CHEM.f  FLIP-Chem.for  KEMPRN.f  MSIS00.f  Makefile  PESIMP.f  README  RSPRIM.f  Rates.f  __about__.py  flipchem.f  flipchem.for  flipchem.pyf
src/nrlmsise00/: README  _swigmsis_wrap.c  c_msis.py  swigmsis.i
tests/: test_flipchem.py  test_geophys.py  test_msis.py
