[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flipchem"
dynamic = ["version"]
description = 'flipchem provides a python wrapper of the flipchem ionospheric photochemistry model developed by Phil Richards, e.g. Richards2011'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/flipchem#readme"
Issues = "https://github.com/U.N. Owen/flipchem/issues"
Source = "https://github.com/U.N. Owen/flipchem"

[tool.hatch.version]
path = "src/flipchem/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/flipchem tests}"

[tool.coverage.run]
source_pkgs = ["flipchem", "tests"]
branch = true
parallel = true
omit = [
  "src/flipchem/__about__.py",
]

[tool.coverage.paths]
flipchem = ["src/flipchem", "*/flipchem/src/flipchem"]
tests = ["tests", "*/flipchem/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
